5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1638_87.log
== TEST (2019-04-13 21:24:48) 
-- CODE:
n1 = int(input("numero:"))
n2 = int(input("numero:"))
n3 = int(input("numero:"))

if(n1 < n2) e (n1 < n3):
	msg = n1
else:
	msg = n2
	
print(msg)
-- ERROR:
File "XXXX", line 5
    if(n1 < n2) e (n1 < n3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:25:06) 
-- CODE:
n1 = int(input("numero:"))
n2 = int(input("numero:"))
n3 = int(input("numero:"))

if(n1 < n2),(n1 < n3):
	msg = n1
else:
	msg = n2
	
print(msg)
-- ERROR:
File "XXXX", line 5
    if(n1 < n2),(n1 < n3):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:25:15) 
-- CODE:
n1 = int(input("numero:"))
n2 = int(input("numero:"))
n3 = int(input("numero:"))

if(n1 < n2) , (n1 < n3):
	msg = n1
else:
	msg = n2
	
print(msg)
-- ERROR:
File "XXXX", line 5
    if(n1 < n2) , (n1 < n3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:25:25) 
-- CODE:
n1 = int(input("numero:"))
n2 = int(input("numero:"))
n3 = int(input("numero:"))

if(n1 < n2) e (n1 < n3):
	msg = n1
else:
	msg = n2
	
print(msg)
-- ERROR:
File "XXXX", line 5
    if(n1 < n2) e (n1 < n3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:25:36) 
-- CODE:
n1 = int(input("numero:"))
n2 = int(input("numero:"))
n3 = int(input("numero:"))

if(n1 < n2) E (n1 < n3):
	msg = n1
else:
	msg = n2
	
print(msg)
-- ERROR:
File "XXXX", line 5
    if(n1 < n2) E (n1 < n3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:26:12) 
-- CODE:
n1 = int(input("numero:"))
n2 = int(input("numero:"))
n3 = int(input("numero:"))

if(n1 < n2)  (n1 < n3):
	msg = n1
else:
	msg = n2
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(n1 < n2)  (n1 < n3):
TypeError: 'bool' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
